# numuw

./: README.md
backend/: .gitignore  README.md  manage.py
backend/src/apps/core/: admin.py  models.py  serializers.py  tasks.py  urls.py  views.py
backend/src/apps/core/management/commands/: seed_demo_data.py
backend/src/apps/core/migrations/: 0001_initial.py  0002_booking_unique_booking_per_slot.py
backend/src/config/: wsgi.py
mobile/: .env.example  README.md  app.json  package.json  tsconfig.json
mobile/.expo/cache/eslint/: .cache_1d0bs32
mobile/app/: _layout.tsx  index.tsx
mobile/app/(app)/: _layout.tsx
mobile/app/(app)/bookings/: [bookingId].tsx  index.tsx
mobile/app/(app)/therapists/: [therapistId].tsx  index.tsx
mobile/app/(auth)/: index.tsx
mobile/src/components/: Button.tsx  Card.tsx  Field.tsx  Screen.tsx  StatusBadge.tsx
mobile/src/config/: env.ts
mobile/src/features/auth/: AuthScreen.tsx
mobile/src/features/bookings/: BookingStatusScreen.tsx  BookingsScreen.tsx
mobile/src/features/therapists/: TherapistDetailScreen.tsx  TherapistsScreen.tsx
mobile/src/hooks/: useBookingChannel.ts  useRemoteData.ts
mobile/src/lib/: api.ts  date.ts  firebase.ts  websocket.ts
mobile/src/providers/: AppProviders.tsx  AuthProvider.tsx
mobile/src/types/: api.ts
new-backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
new-backend/src/apps/core/: authentication.py  firebase.py  models.py  tasks.py
new-backend/src/config/: asgi.py  celery.py
new-backend/src/config/settings/: base.py
