[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "new-backend"
version = "0.1.0"
description = "Lightweight Django REST backend with PostgreSQL, Celery, and Redis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "Django>=5.1,<6.0",
  "djangorestframework>=3.15,<4.0",
  "psycopg[binary]>=3.2,<4.0",
  "celery>=5.4,<6.0",
  "redis>=5.0,<6.0",
  "firebase-admin>=6.5,<7.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
